--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
 .container {
     width: 600px;
-    /* height: 200px; */
+    height: 400px;
     border: 5px;
     border: 5px solid #333;
     margin: 30px auto;
     padding: 5px;
     box-sizing: border-box;
     display: flex;
-    /* flex-direction: column; */
+    align-items: baseline;
+    /* justify-content: space-evenly; */
+    /* flex-wrap: wrap; */
+    /* flex-direction: row; */
 }
 
-/* .container::after {
-    content: '';
-    display: block;
-    clear: both;
-} */
-
 .container div {
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     background-color: rgb(68, 0, 255);
     margin: 2px;
-    /* float: left; */
+}
+
+.container div.tiga {
+    font-size: 60px;
+}
+.container div.empat {
+    font-size: 100px;
 }
