--- a/style.css
+++ b/style.css
@@ -1,28 +1,24 @@
 .container {
     width: 600px;
-    height: 400px;
+    height: 150px;
     border: 5px;
     border: 5px solid #333;
     margin: 30px auto;
     padding: 5px;
     box-sizing: border-box;
     display: flex;
-    align-items: baseline;
+    /* align-items: center; */
     /* justify-content: space-evenly; */
     /* flex-wrap: wrap; */
     /* flex-direction: row; */
 }
 
 .container div {
-    width: 120px;
-    height: 120px;
     background-color: rgb(68, 0, 255);
     margin: 2px;
+    flex: 1;
 }
 
-.container div.tiga {
-    font-size: 60px;
-}
-.container div.empat {
-    font-size: 100px;
+.container div.dua {
+    flex: 3
 }
