--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     padding: 5px;
     box-sizing: border-box;
     display: flex;
-    /* align-items: center; */
-    /* justify-content: space-evenly; */
+    align-items: stretch;
+    /* justify-content: center; */
     /* flex-wrap: wrap; */
     /* flex-direction: row; */
 }
@@ -20,5 +20,6 @@
 }
 
 .container div.dua {
-    flex: 3
+    flex: 3;
+    align-self: center;
 }
